<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_3sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:cardBackgroundColor="@color/dashboard_item_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/buyerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/ic_profile" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="@dimen/_14sdp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                android:paddingStart="@dimen/_40sdp"
                android:paddingEnd="@dimen/_5sdp">

                <Button
                    android:id="@+id/acceptBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/buyerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/buyer_name"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toStartOf="@id/acceptBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sellerDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/i_need_electrician"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@id/buyerName"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sellerLocation"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintTop_toBottomOf="@id/sellerDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/sellerCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/punjab"

                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintStart_toEndOf="@id/sellerLocation"
                    app:layout_constraintTop_toBottomOf="@id/sellerDescription"
                    app:layout_constraintBottom_toTopOf="@id/orderTimer"
                    />

                <TextView
                    android:id="@+id/orderTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_00_00"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintTop_toBottomOf="@id/sellerLocation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>