<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_100sdp"
            android:src="@drawable/service" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/_22ssp"
            android:layout_marginTop="@dimen/_60sdp"
            android:textStyle="bold"
            android:textColor="@color/maincolor"
            android:fontFamily="@font/audiowide"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amita"
            android:text="Nation wide Service Provider"
            android:textColor="@color/maincolor"
            android:textSize="@dimen/_12ssp" />


        <Button
            android:id="@+id/seller"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:background="@drawable/background_gradient"
            android:fontFamily="@font/baumans"
            android:text="@string/login_as_service_provider"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/buttonStyleSmall"
            />

        <Button
            android:id="@+id/buyer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:background="@drawable/background_gradient"
            android:fontFamily="@font/baumans"
            android:text="@string/login_as_service_user"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/seller"
            style="?android:attr/buttonStyleSmall"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>