<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerActivities.ItemContainer">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_3sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backIcon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/secondary_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/_5sdp"
                android:text="Accept Order"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/orderImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ourservices"
                app:layout_constraintDimensionRatio="H, 2:1.6"
                app:layout_constraintTop_toBottomOf="@+id/textview"
                app:riv_corner_radius="@dimen/_8sdp"

                />

            <TextView
                android:id="@+id/orderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/complete_service_detail"
                android:textColor="@color/primary_label"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/orderImage" />

            <TextView
                android:id="@+id/orderCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/with_category"
                android:textColor="@color/primary_label"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/orderDetails" />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/october_18_2021"
                android:textColor="@color/primary_label"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/orderCategory" />

<!--            <RatingBar-->
<!--                android:id="@+id/serviceRating"-->
<!--                style="@style/Widget.AppCompat.RatingBar.Small"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/_4sdp"-->
<!--                android:isIndicator="true"-->
<!--                android:numStars="5"-->
<!--                android:rating="4.5"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/orderDate" />-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/serviceFavorite"-->
<!--                android:layout_width="@dimen/_20sdp"-->
<!--                android:layout_height="@dimen/_20sdp"-->
<!--                android:background="@drawable/background_favorite"-->
<!--                android:padding="@dimen/_5sdp"-->
<!--                android:src="@drawable/ic_favorite"-->
<!--                android:tint="@color/white"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/orderDate"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="@id/orderDate"
                app:layout_constraintTop_toBottomOf="@id/orderDate">

                <TextView
                    android:id="@+id/paymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/caudex_bold"
                    android:text="Cash by hand"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>


            <Button
                android:id="@+id/acceptOrderBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maincolor"
                android:text="Accept Service Order"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>