<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyerActivities.BuyerItemContainer">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_3sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backIcon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:tint="@color/secondary_label"
                />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Request Order"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/_5sdp"
                />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/orderImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H, 2:1.6"
                app:layout_constraintTop_toBottomOf="@+id/textview"
                app:riv_corner_radius="@dimen/_8sdp"
                android:src="@drawable/ourservices"

                />

            <TextView
                android:id="@+id/serviceDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/primary_label"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/orderImage"
                android:text="@string/complete_service_detail"
                />
            <TextView
                android:id="@+id/serviceCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/primary_label"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/serviceDetails"
                android:text="@string/with_category"
                />
            <TextView
                android:id="@+id/serviceDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/primary_label"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/serviceCategory"
                android:text="@string/october_18_2021"
                />

            <RatingBar
                android:id="@+id/serviceRating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/serviceDate"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/serviceFavorite"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/background_favorite"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_favorite"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/serviceRating"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/serviceRating"
                app:layout_constraintStart_toStartOf="@id/serviceRating"
                android:layout_marginTop="@dimen/_5sdp"
                >
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:orientation="vertical"
                    >
                    <RadioButton
                        android:id="@+id/paymentCash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cash by hand"
                        android:buttonTint="@color/maincolor"
                        android:textSize="@dimen/_12ssp"
                        />
                    <RadioButton
                        android:id="@+id/paymentOnline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Online Payment"
                        android:buttonTint="@color/maincolor"
                        android:textSize="@dimen/_12ssp"
                        />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/requestOrderBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Request Service Order"
                android:textSize="@dimen/_12ssp"
                android:backgroundTint="@color/maincolor"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>